packages/scaml.1.2.0~pre7/tests/fail/lambda.ml
open SCaml
let x = fun (x : int) -> Int 1

    
